--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "dependencies": {
         "bcrypt": "^5.1.0",
         "express": "^4.18.2",
+        "joi": "^17.7.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.8.0",
-        "password-validator": "^5.3.0"
+        "multer": "^1.4.5-lts.1",
+        "password-validator": "^5.3.0",
+        "sharp": "^0.31.2",
+        "sharp-multer": "^0.2.5"
     }
 }
